fix: key log와 함수 구조 개선, 키 길이 bit단위로 출력

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(HOOK_SRCS
     src/resolver.cpp
     src/hooks/foo_hook.cpp
     src/hooks/openssl_hooks.cpp
-    src/utils/get_key.cpp          # ← 여기로 이동 반영
+    src/utils/crypto_utils.cpp    
 )
 
 add_library(hook SHARED ${HOOK_SRCS})
