feat: cryptodev hook 구현, Java hook 등 이름 변경과 구조 정리, JVM 경우 로그 기록(추후 구현 필요)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #output
 *.ndjson
+logs/
 
 # --- Build artifacts (CMake / Make)
 build/
@@ -76,3 +77,7 @@ __pycache__/
 *.pem
 *.key
 *.crt
+
+
+# Temporary files
+AGENTS.md
