fix: af_alg 테스트 코드 추가

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ if(ENABLE_AF_ALG)
     check_include_file("linux/if_alg.h" HAVE_LINUX_IF_ALG_H)
     if(HAVE_LINUX_IF_ALG_H)
         add_executable(af_alg_aes_gcm_demo tests/af_alg/af_alg_aes_gcm_demo.c)
+        add_executable(af_alg_hmac_sha256_demo tests/af_alg/af_alg_hmac_sha256_demo.c)
     else()
         message(WARNING "linux/if_alg.h not found; skipping AF_ALG demo build")
     endif()
@@ -180,7 +181,7 @@ if(LIBSODIUM_FOUND)
         libsodium_box_demo)
 endif()
 if(ENABLE_AF_ALG AND HAVE_LINUX_IF_ALG_H)
-    list(APPEND TEST_TARGETS af_alg_aes_gcm_demo)
+    list(APPEND TEST_TARGETS af_alg_aes_gcm_demo af_alg_hmac_sha256_demo)
 endif()
 if(ENABLE_CRYPTODEV AND HAVE_CRYPTODEV_H)
     list(APPEND TEST_TARGETS cryptodev_aes_cbc_demo)
@@ -192,6 +193,7 @@ foreach(tgt IN LISTS TEST_TARGETS)
      NOT tgt STREQUAL "libsodium_secretbox_demo" AND
      NOT tgt STREQUAL "libsodium_box_demo" AND
      NOT tgt STREQUAL "af_alg_aes_gcm_demo" AND
+     NOT tgt STREQUAL "af_alg_hmac_sha256_demo" AND
      NOT tgt STREQUAL "cryptodev_aes_cbc_demo")
     target_precompile_headers(${tgt} PRIVATE ${CMAKE_SOURCE_DIR}/include/pch.h)
   endif()
