feat: wolfssl hook, test code 추가

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,28 @@ if(ENABLE_MBEDTLS)
     endif()
 endif()
 
+set(WOLFSSL_FOUND OFF)
+find_path(WOLFSSL_INCLUDE_DIR wolfssl/wolfcrypt/aes.h)
+find_library(WOLFSSL_LIBRARY wolfssl)
+if(WOLFSSL_INCLUDE_DIR AND WOLFSSL_LIBRARY)
+    set(WOLFSSL_FOUND ON)
+    target_sources(hook PRIVATE src/Linux/hooks/hook_wolfssl.cpp)
+    target_include_directories(hook PRIVATE ${WOLFSSL_INCLUDE_DIR})
+    add_executable(wolfssl_aes_gcm_demo tests/wolfSSL/symmetric/wolfssl_aes_gcm_demo.c)
+    target_include_directories(wolfssl_aes_gcm_demo PRIVATE ${WOLFSSL_INCLUDE_DIR})
+    target_link_libraries(wolfssl_aes_gcm_demo PRIVATE ${WOLFSSL_LIBRARY})
+
+    add_executable(wolfssl_aes_cbc_demo tests/wolfSSL/symmetric/wolfssl_aes_cbc_demo.c)
+    target_include_directories(wolfssl_aes_cbc_demo PRIVATE ${WOLFSSL_INCLUDE_DIR})
+    target_link_libraries(wolfssl_aes_cbc_demo PRIVATE ${WOLFSSL_LIBRARY})
+
+    add_executable(wolfssl_hmac_sha256_demo tests/wolfSSL/hash/wolfssl_hmac_sha256_demo.c)
+    target_include_directories(wolfssl_hmac_sha256_demo PRIVATE ${WOLFSSL_INCLUDE_DIR})
+    target_link_libraries(wolfssl_hmac_sha256_demo PRIVATE ${WOLFSSL_LIBRARY})
+else()
+    message(WARNING "wolfSSL headers or library not found; skipping wolfssl demo build")
+endif()
+
 if(ENABLE_AF_ALG)
     check_include_file("linux/if_alg.h" HAVE_LINUX_IF_ALG_H)
     if(HAVE_LINUX_IF_ALG_H)
